[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foostrap"
description = "Fast Bootstrap statistics using Numba"
version = "1.0.3"
dependencies = [
  "numpy>=1.25",
  "numba>=0.58",
  "scipy>=1.11"
]
requires-python = ">= 3.9"
authors = [{ name="Jose A Poblete", email="jose.a.poblete@pm.me" }]
keywords = ["bootstrap", "confidence interval", "ab testing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"

[project.optional-dependencies]
iccrt = ["icc-rt"]

[project.urls]
Repository = "https://github.com/japlete/foostrap"